--- a/index.html
+++ b/index.html
@@ -31,13 +31,24 @@
             font-family: Arial, sans-serif;
             font-size: 16px;
             margin-top: 10px;
+            text-align: center;
+        }
+        .player-info {
+            color: #aaa;
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
+    <div class="player-info">Player: AwesomeJeff7 | UTC: <span id="utcTime">2025-03-09 05:25:31</span></div>
     <div class="score">Player: <span id="playerScore">0</span> | AI: <span id="aiScore">0</span></div>
     <canvas id="pongCanvas" width="800" height="400"></canvas>
-    <div class="stats">Speed Multiplier: <span id="speedMultiplier">1.00</span>x</div>
+    <div class="stats">
+        Speed Multiplier: <span id="speedMultiplier">1.00</span>x<br>
+        Hit Count: <span id="hitCount">0</span>
+    </div>
     <script src="pong.js"></script>
 </body>
 </html>
